...
    <string name="item_category">Category</string>
    <string name="item_date">Date</string>
    <string name="item_cost">Cost</string>
    <string name="item_category_adapter">Category:</string>
    <string name="item_date_adapter">Date:</string>
    <string name="item_cost_adapter">Cost:</string>
    <string name="item_add">Add</string>
    <string name="reset">Reset</string>
    <string name="total_cost">Total cost</string>
    <string name="delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="save">Save</string>
...
