...
                android:layout_alignBaseline="@+id/summaryView"
                android:layout_toEndOf="@+id/summaryView"
                android:layout_toRightOf="@+id/summaryView"
                android:text="@string/show_details" />

            <Button
                android:id="@+id/addbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/item_add"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
...
